ros2_study/log/build_2025-11-12_11-40-55/my_first_package/stderr.log
  File "/home/hyh/ros2_study/install/my_first_package/lib/python3.10/site-packages/my_first_package/my_multi_ thread.py", line 1
    import rclpy s rp
                 ^
SyntaxError: invalid syntax

